<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:weightSum="1"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <TextView
            android:id="@+id/stdNameTextView"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:background="#0000ff"
            android:gravity="center"
            android:text="@string/student_name"
            android:textColor="#ffff00"
            android:textStyle="bold"
            android:textSize="30dp"

            />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1">

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stdNameTextView"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/hiTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_marginTop="15dp"
                    android:paddingLeft="5dp"
                    android:text="@string/hi_world"
                    android:textSize="22sp" />

                <RadioGroup
                    android:id="@+id/HiRadios"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/hiTextview">


                    <RadioButton
                        android:id="@+id/AliceRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/alice"
                        android:textSize="20sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="83dp" />

                    <RadioButton
                        android:id="@+id/BobRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/bob"
                        android:textSize="20sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="139dp" />

                    <RadioButton
                        android:id="@+id/CarolRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/carol"
                        android:textSize="20sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="83dp" />


                </RadioGroup>

                <Button
                    android:id="@+id/HiBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/HiRadios"
                    android:text="@string/say_hi"
                    android:textSize="20sp" />

            </LinearLayout>

            <!-- second column -->
            <LinearLayout
                android:id="@+id/secssion1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_below="@+id/stdNameTextView"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/helloTextview"
                    android:layout_width="wrap_content"
                    android:layout_height="43dp"
                    android:layout_below="@+id/HelloBtn"
                    android:layout_marginTop="15dp"
                    android:gravity="start"
                    android:paddingLeft="5dp"
                    android:text="Hello Seneca"
                    android:textSize="22sp" />

                <RadioGroup
                    android:id="@+id/radioGroup2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">


                    <RadioButton
                        android:id="@+id/DaveRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/dave"
                        android:textSize="20sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="83dp" />

                    <RadioButton
                        android:id="@+id/EveRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/eve"
                        android:textSize="20sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="139dp" />

                    <RadioButton
                        android:id="@+id/FredRadio"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/fred"
                        android:textSize="20sp"
                        tools:layout_editor_absoluteX="16dp"
                        tools:layout_editor_absoluteY="83dp" />


                </RadioGroup>

                <Button
                    android:id="@+id/HelloBtn"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_below="@+id/helloRadios"
                    android:text="@string/say_hello"
                    android:textSize="20sp" />

            </LinearLayout>
        </LinearLayout>

        <!-- Second row -->
        <LinearLayout
            android:id="@+id/checkboxes"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/redCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:background="#ff0000"
                android:text="Red" />

            <CheckBox
                android:id="@+id/YellowCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="0.3"
                android:background="#ffff00"
                android:text="Yellow" />


            <CheckBox
                android:id="@+id/GreenCheckBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.3"
                android:background="#00ff00"
                android:text="Green" />

        </LinearLayout>

        <Button
            android:id="@+id/ColorBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_below="@+id/checkboxes"
            android:gravity="center"
            android:text="COLORS"
            android:textSize="20sp" />

    </LinearLayout> <!-- big layout -->


</android.support.constraint.ConstraintLayout>